Fix issue with bg on mobile devices

--- a/client/style.css
+++ b/client/style.css
@@ -23,6 +23,9 @@ body {
 .container ul {
 	margin: 0;
 }
+.mask {
+	margin-bottom: -2px;
+}
 .mask img {
 	width: 100%;
 	display: block; /* Prevents bg bleed through under image in some browsers */
